# quickt

./: .env.example  .gitignore  CLAUDE.md  GO_TO_MARKET.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: email.py  exceptions.py  mobile_money.py  qr.py  security.py  storage.py
backend/app/domains/agencies/: models.py  router.py  schemas.py  service.py
backend/app/domains/auth/: models.py  router.py  schemas.py  service.py
backend/app/domains/buses/: models.py  router.py  schemas.py  service.py
backend/app/domains/departures/: models.py  router.py  schemas.py  service.py
backend/app/domains/notifications/: models.py  router.py  schemas.py  service.py
backend/app/domains/payments/: models.py  router.py  schemas.py  service.py
backend/app/domains/routes/: models.py  router.py  schemas.py  (+1 more)
backend/data/: agencies.json  buses.json  routes.json  schedules.json  users.json
backend/migrations/: 001_down_initial_schema.sql  001_up_initial_schema.sql  002_down_booking.sql  002_up_booking.sql  003_down_payments.sql  003_up_payments.sql  004_down_trips_notifications.sql  004_up_trips_notifications.sql  005_down_widen_phone.sql  005_up_widen_phone.sql
backend/scripts/: migrate.py  seed_db.py
backend/tests/: conftest.py  test_booking_journey.py
backend/tests/domains/: test_agencies.py  test_auth.py  test_buses.py  test_departures.py  test_notifications.py  test_payments.py  test_routes.py  test_schedules.py  test_tickets.py  test_trips.py
(+90 files in other folders)
